# WoCo-Event-App

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
contracts-stylus/like-aggregator/: Cargo.toml
contracts-stylus/like-aggregator/src/: lib.rs  main.rs
deploy/: docker-compose.yml
docs/: AGENT_COMMERCE_SURFACE.md  ARBITRUM_BUILDATHON_PLAN.md  ARBITRUM_BUILDATHON_PROGRESS.md  ATTENDEE_GATE_RESALE_PLAN.md  BUILDATHON_SUBMISSION.md  CLIENT_FEEDS_AUTH_KINDS_HANDOVER.md  CLIENT_FEEDS_EDITIONS_HANDOVER_2026-06-28.md  CLIENT_FEEDS_ETHERNA_HANDOVER_2026-06-27.md  CLIENT_FEED_SIGNER_HANDOVER.md  CODEX_CONTEXT.md  CONTENT_FEED_VERSIONING_HANDOVER_2026-07-04.md  CROSS_DEVICE_RECOVERY.md  CRYPTO_AUDIT_2026-04-08.md  CRYPTO_CLIENT_VERIFIABLE_PAYMENTS_PLAN.md  CUSTOM_DOMAINS_HANDOVER.md  CUSTOM_DOMAINS_PLAN.md  DEMO.md  DEPLOY_CHECKLIST_2026-04-09.md  DEVLOG.md  EAS_LIKES_HANDOVER.md  EAS_SOCIAL_GRAPH.md  EDITIONS_PUBLISH_SPEED_HANDOVER_2026-06-29.md  EMAIL_KERNELIZE_PLAN.md  EMAIL_WEB3AUTH_LOGIN.md  ETHERNA_COMMIT4_HANDOVER_2026-05-18.md  ETHERNA_INTEGRATION.md  ETHERNA_USER_CONTENT_HANDOVER.md  EVENTS_DIRECTORY.md  EVENT_CREATION_ANTI_ABUSE.md  FEED_SIGNER_ESCROW_HANDOVER.md  FEED_SIGNER_REVIEW_2026-07-02.md  HANDOVER_2026-05-26_DEV_FIX.md  HETZNER_DEPLOY.md  LAPTOP_BEE_EMERGENCY_RESURRECTION.md  LAPTOP_SERVER_TO_HETZNER_SSH_SETUP.md  LAUNCH_PLAN.md  MULTI_PAGE_SITE_BUILDER.md  NEXT.md  NEXT_STEPS_09-05-26.md  ONCHAIN_TICKETING.md  (+42 more)
nwaku/: docker-compose.yml
(+476 files in other folders)
